Fix mobile not showing menu items

--- a/blog/css/clean-blog.css
+++ b/blog/css/clean-blog.css
@@ -111,6 +111,7 @@ img::-moz-selection {
 #mainNav .navbar-nav > li.nav-item > a {
   font-size: 12px;
   font-weight: 800;
+  color: black;
   letter-spacing: 1px;
   text-transform: uppercase;
 }
